# UTFTConverter

./: .gitignore  Makefile  README.md  UTFTConverter.cabal  stack.yaml
examples/cat_01/: cat_01_tga_120x120.tga
examples/cat_03/: cat_03_tga_120x120.tga
main-src/: Main.hs
src/: C.hs  Format.hs  Main.hs  Raw.hs  RawRGB.hs  Webserver.hs
src/Converter/: Converter.hs  ImageConverter.hs  Jpeg.hs  JuicyConverter.hs  RGB565.hs
src/Format/: C.hs  Converter.hs  RGB565.hs  Raw.hs  cat_01_bmp_120x120.raw
src/converter/: C.hs  Converter.hs  Main.hs  RGB565.hs  Raw.hs
tests/: Tests.hs
